--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget15/charts-widget15.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget15/charts-widget15.component.html
@@ -66,7 +66,7 @@
 
                       <div class="row">
                         <div class="col-md-3">
-                          <label for="example-text-input" class="col-auto col-form-label">Date :</label>
+                          <label for="example-text-input" class="col-auto col-form-label"><b>Date :</b></label>
 
                         </div>
                         <div class="col-md-8">
@@ -79,7 +79,7 @@
 
                       <div class="row">
                         <div class="col-md-3">
-                          <label for="example-text-input" class="col-auto col-form-label">Bill Number :</label>
+                          <label for="example-text-input" class="col-auto col-form-label"><b>Bill Number :</b></label>
 
                         </div>
                         <div class="col-md-8">
@@ -90,7 +90,7 @@
 
                       <div class="row">
                         <div class="col-md-3">
-                          <label for="example-text-input" class="col-auto col-form-label">Product :</label>
+                          <label for="example-text-input" class="col-auto col-form-label"><b>Product :</b></label>
 
                         </div>
                         <div class="col-md-4">
@@ -103,7 +103,7 @@
                           </select>
                         </div>
                         <div class="col-auto">
-                          <label for="example-text-input" class="col-auto col-form-label">Rate :</label>
+                          <label for="example-text-input" class="col-auto col-form-label"><b>Rate :</b></label>
 
                         </div>
                         <div class="col-md-3">
@@ -120,7 +120,7 @@
 
                       <div class="row">
                         <div class="col-md-3">
-                          <label for="example-text-input" class="col-auto col-form-label">Customer Name :</label>
+                          <label for="example-text-input" class="col-auto col-form-label"><b>Customer Name :</b></label>
 
                         </div>
                         <div class="col-md-8">
@@ -133,7 +133,7 @@
 
                       <div class="row">
                         <div class="col-md-3">
-                          <label for="example-text-input" class="col-auto col-form-label">Customer Number :</label>
+                          <label for="example-text-input" class="col-auto col-form-label"><b>Customer Number :</b></label>
 
                         </div>
                         <div class="col-md-8">
@@ -152,7 +152,7 @@
 
                       <div class="row">
                         <div class="col-md-3">
-                          <label for="example-text-input" class="col-auto col-form-label">Vehicle Number :</label>
+                          <label for="example-text-input" class="col-auto col-form-label"><b>Vehicle Number :</b></label>
 
                         </div>
                         <div class="col-md-8">
@@ -168,7 +168,7 @@
 
                       <div class="row">
                         <div class="col-md-3">
-                          <label for="example-text-input" class="col-auto col-form-label">Amount :</label>
+                          <label for="example-text-input" class="col-auto col-form-label"><b>Amount :</b></label>
                         </div>
                         <!-- <div class="col-md-1">
                                   <input type="radio" value="AMOUNT"
@@ -201,7 +201,7 @@
 
                       <div class="row">
                         <div class="col-md-3">
-                          <label for="example-text-input" class="col-auto col-form-label">Quantity :</label>
+                          <label for="example-text-input" class="col-auto col-form-label"><b>Quantity :</b></label>
                         </div>
                         <!-- <div class="col-md-0.5">
                                   <input class="form-control form-control-sm mr-1 w-40" type="radio" value="QUANTITY"
@@ -280,7 +280,7 @@
                       <br><br>
                       <div class="row">
                         <div class="col-md-3">
-                          <label for="example-text-input" class="col-auto col-form-label">Date :</label>
+                          <label for="example-text-input" class="col-auto col-form-label"><b>Date :</b></label>
                         </div>
                         <div class="col-md-8">
                           <input class="form-control" placeholder="DD-MM-YYYY" name="startDate"
@@ -292,7 +292,7 @@
 
                       <div class="row">
                         <div class="col-md-3">
-                          <label for="example-text-input" class="col-auto col-form-label">Bill Number :</label>
+                          <label for="example-text-input" class="col-auto col-form-label"><b>Bill Number :</b></label>
                         </div>
                         <div class="col-md-8">
                           <input class="form-control" placeholder="enter bill number" formControlName="billNumber">
@@ -302,7 +302,7 @@
 
                       <div class="row">
                         <div class="col-md-3">
-                          <label for="example-text-input" class="col-auto col-form-label">Customer Name :</label>
+                          <label for="example-text-input" class="col-auto col-form-label"><b>Customer Name :</b></label>
                         </div>
                         <div class="col-md-3">
                           <input class="form-control" type="text" list="corporateList" placeholder="select customer"
@@ -322,7 +322,7 @@
 
                       <div class="row">
                         <div class="col-md-3">
-                          <label for="example-text-input" class="col-auto col-form-label">Address :</label>
+                          <label for="example-text-input" class="col-auto col-form-label"><b>Address :</b></label>
                         </div>
                         <div class="col-md-8">
                           <input class="form-control" placeholder="enter address" formControlName="address"
@@ -333,7 +333,7 @@
 
                       <div class="row">
                         <div class="col-md-3">
-                          <label for="example-text-input" class="col-auto col-form-label">Customer Number :</label>
+                          <label for="example-text-input" class="col-auto col-form-label"><b>Customer Number :</b></label>
                         </div>
                         <div class="col-md-8">
                           <input type="number" class="form-control" formControlName="customerNumber"
@@ -349,7 +349,7 @@
 
                       <div class="row">
                         <div class="col-md-3">
-                          <label for="example-text-input" class="col-auto col-form-label">vehicle number :</label>
+                          <label for="example-text-input" class="col-auto col-form-label"><b>vehicle number :</b></label>
                         </div>
                         <div class="col-md-8">
                           <input class="form-control" type="text" placeholder="enter vehicle number"
@@ -361,7 +361,7 @@
 
                       <div class="row">
                         <div class="col-md-3">
-                          <label for="example-text-input" class="col-auto col-form-label">Product :</label>
+                          <label for="example-text-input" class="col-auto col-form-label"><b>Product :</b></label>
                         </div>
                         <div class="col-md-3">
                           <select class="form-control" formControlName="lubeId" (change)="getLubeDetails($event)"
@@ -381,7 +381,7 @@
 
                       <div class="row">
                         <div class="col-md-3">
-                          <label for="example-text-input" class="col-auto col-form-label">Tax :</label>
+                          <label for="example-text-input" class="col-auto col-form-label"><b>Tax :</b></label>
                         </div>
                         <div class="col-md-3">
                           <select class="form-control" formControlName="gst" (blur)="gstCalculation1()" required>
@@ -402,7 +402,7 @@
 
                       <div class="row">
                         <div class="col-md-3">
-                          <label for="example-text-input" class="col-auto col-form-label">Amount :</label>
+                          <label for="example-text-input" class="col-auto col-form-label"><b>Amount :</b></label>
                         </div>
                         <div class="col-md-8">
                           <input class="form-control" formControlName="reqCreditAmount" placeholder="Enter Amount"
@@ -416,7 +416,7 @@
                       <br>
                       <div class="row">
                         <div class="col-md-3">
-                          <label for="example-text-input" class="col-auto col-form-label">Quantity In Pieces:</label>
+                          <label for="example-text-input" class="col-auto col-form-label"><b>Quantity In Pieces:</b></label>
                         </div>
                         <div class="col-md-8">
                           <input class="form-control" [(ngModel)]="quantityInPieces"
@@ -429,7 +429,7 @@
                       <div class="row">
 
                         <div class="col-md-3">
-                          <label for="example-text-input" class="col-auto col-form-label">Quantity :</label>
+                          <label for="example-text-input" class="col-auto col-form-label"><b>Quantity :</b></label>
                         </div>
                         <div class="col-md-8">
                           <input class="form-control" formControlName="reqQuantity" placeholder="Enter Quantity"
