--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget2/charts-widget2.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget2/charts-widget2.component.html
@@ -22,8 +22,8 @@
                                     <br>
                                     <div class="row">
                                         <div class="col-lg-2">
-                                            <label for="example-text-input" class="col-form-label">Invoice Date
-                                                :</label>
+                                            <label for="example-text-input" class="col-form-label"><b>Invoice Date
+                                                :</b></label>
                                         </div>
                                         <div class="col-lg-8">
                                             <input class="form-control" placeholder="DD-MM-YYYY" name="invoiceDate"
@@ -36,8 +36,8 @@
                                     <br>
                                     <div class="row">
                                         <div class="col-lg-2">
-                                            <label for="example-text-input" class="col-form-label">Received Date :
-                                            </label>
+                                            <label for="example-text-input" class="col-form-label"><b>Received Date :
+                                            </b></label>
                                         </div>
                                         <div class="col-lg-8">
                                             <input class="form-control" placeholder="DD-MM-YYYY" name="receivedDate"
@@ -50,8 +50,8 @@
                                     <br>
                                     <div class="row">
                                         <div class="col-lg-2">
-                                            <label for="example-text-input" class="col-form-label">Vehicle Number :
-                                            </label>
+                                            <label for="example-text-input" class="col-form-label"><b>Vehicle Number :
+                                            </b></label>
                                         </div>
                                         <div class="col-lg-8">
                                             <input class="form-control" placeholder="Enter Vehicle Number"
@@ -64,8 +64,8 @@
                                     <br>
                                     <div class="row">
                                         <div class="col-lg-2">
-                                            <label for="example-text-input" class="col-form-label">Invoice Number
-                                                :</label>
+                                            <label for="example-text-input" class="col-form-label"><b>Invoice Number
+                                                :</b></label>
                                         </div>
                                         <div class="col-lg-8">
                                             <input class="form-control" placeholder="Enter Invoice Number"
@@ -85,12 +85,12 @@
                                     </thead>
                                     <tbody *ngFor="let charges of CreditRequestDataArrayOilCompany; let i = index;">
                                         <tr>
-                                            <th style="text-align: center;"> Product </th>
-                                            <th style="text-align: center;"> Quantity</th>
-                                            <th style="text-align: center;"> Basic Amount </th>
-                                            <th style="text-align: center;"> VAT Amount</th>
-                                            <th style="text-align: center;"> Cess Amount </th>
-                                            <th style="text-align: center;"> Other Components</th>
+                                            <th style="text-align: center;"><b> Product </b></th>
+                                            <th style="text-align: center;"><b> Quantity</b></th>
+                                            <th style="text-align: center;"><b> Basic Amount </b></th>
+                                            <th style="text-align: center;"><b> VAT Amount</b></th>
+                                            <th style="text-align: center;"><b> Cess Amount</b> </th>
+                                            <th style="text-align: center;"><b> Other Components</b></th>
                                         </tr>
                                         <tr>
                                             <td style="text-align: center;">
@@ -143,9 +143,9 @@
                                         </tr>
 
                                         <tr>
-                                            <th style="text-align: center;"> VAT % </th>
-                                            <th style="text-align: center;"> Total Tax </th>
-                                            <th style="text-align: center;"> Total Amount</th>
+                                            <th style="text-align: center;"><b> VAT % </b></th>
+                                            <th style="text-align: center;"><b> Total Tax </b></th>
+                                            <th style="text-align: center;"><b> Total Amount</b></th>
                                         </tr>
 
                                         <tr>
