--- a/src/app/_metronic/partials/content/widgets/feeds/feeds-widget1/feeds-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/feeds/feeds-widget1/feeds-widget1.component.html
@@ -80,9 +80,9 @@
     <table class="table main-table" *ngIf="isOpeningUpdate">
       <thead class="table-light">
         <tr>
-          <th style="text-align: left; ">Opening Date</th>
-          <th style="text-align: left; ">Opening Balance</th>
-          <th style="text-align: left; ">Action</th>
+          <th style="text-align: left; "><b>Opening Date</b></th>
+          <th style="text-align: left; "><b>Opening Balance</b></th>
+          <th style="text-align: left; "><b>Action</b></th>
         </tr>
       </thead>
       <tbody>
@@ -116,13 +116,13 @@
       <table class="table table-hover table-striped table-nowrap">
         <thead class="table-light">
           <tr>
-            <th style="text-align: left;"> Date </th>
-            <th style="text-align: left;"> Book </th>
-            <th style="text-align: left;"> Transaction Type </th>
-            <th style="text-align: left;"> Details </th>
-            <th style="text-align: left;"> Paid From </th>
-            <th style="text-align: left;"> Paid To </th>
-            <th style="text-align: left;"> Amount</th>
+            <th style="text-align: left;"><b> Date </b></th>
+            <th style="text-align: left;"><b> Book </b></th>
+            <th style="text-align: left;"><b> Transaction Type </b></th>
+            <th style="text-align: left;"><b> Details </b></th>
+            <th style="text-align: left;"><b> Paid From </b></th>
+            <th style="text-align: left;"><b> Paid To </b></th>
+            <th style="text-align: left;"><b> Amount </b></th>
             <th></th>
           </tr>
         </thead>
@@ -361,15 +361,15 @@
       <table class="table table-hover table-striped table-nowrap">
         <thead class="table-light">
           <tr>
-            <th style="text-align: left;">Date</th>
-            <th style="text-align: left;">Book</th>
-            <th style="text-align: left;">Transaction Type</th>
-            <th style="text-align: left;">Details</th>
-            <th style="text-align: left;">Paid From</th>
-            <th style="text-align: left;">Paid To</th>
-            <th style="text-align: left;">Amount</th>
-            <th style="text-align: left;">Created By</th>
-            <th style="text-align: left;">Action</th>
+            <th style="text-align: left;"><b>Date</b></th>
+            <th style="text-align: left;"><b>Book</b></th>
+            <th style="text-align: left;"><b>Transaction Type</b></th>
+            <th style="text-align: left;"><b>Details</b></th>
+            <th style="text-align: left;"><b>Paid From</b></th>
+            <th style="text-align: left;"><b>Paid To</b></th>
+            <th style="text-align: left;"><b>Amount</b></th>
+            <th style="text-align: left;"><b>Created By</b></th>
+            <th style="text-align: left;"><b>Action</b></th>
           </tr>
         </thead>
         <tbody *ngFor="let data of reportData; let i = index;">
