--- a/src/app/_metronic/partials/content/widgets/feeds/feeds-widget13/feeds-widget13.component.html
+++ b/src/app/_metronic/partials/content/widgets/feeds/feeds-widget13/feeds-widget13.component.html
@@ -55,6 +55,7 @@
                                     <table class="table table-hover table-striped table-nowrap">
                                         <thead class="table-light">
                                             <tr>
+                                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                                 <th style="text-align: left;"><b> Date </b></th>
                                                 <th style="text-align: left;"><b> Transaction Type </b></th>
                                                 <th style="text-align: left;"><b> Details </b></th>
@@ -67,6 +68,7 @@
                                         </thead>
                                         <tbody *ngFor="let data of addAccountingArray; let i = index;">
                                             <tr>
+                                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                                 <td>
                                                     <input class="form-control" placeholder="DD/MM/YYYY" name="date"
                                                         (click)="startDate.toggle()" style="background-color: #ffffff;"
@@ -235,6 +237,7 @@
                                     <table class="table table-hover">
                                         <thead>
                                             <tr>
+                                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                                 <th style="text-align: left;"><b> Date </b></th>
                                                 <th style="text-align: left;"><b> Transaction Type </b></th>
                                                 <th style="text-align: left;"><b> Details </b></th>
@@ -246,6 +249,7 @@
                                         </thead>
                                         <tbody *ngFor="let data of accountingData;">
                                             <tr>
+                                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                                 <td style="text-align: left;">
                                                     <span *ngIf="data.accountingDate == '2022-01-01' ">
                                                         1 Jan, 2022
