--- a/src/app/_metronic/partials/content/widgets/feeds/feeds-widget2/feeds-widget2.component.html
+++ b/src/app/_metronic/partials/content/widgets/feeds/feeds-widget2/feeds-widget2.component.html
@@ -4,12 +4,12 @@
           <div class="card-body">
               <form [formGroup]="filterForm">
                   <div class="mb-3 row">
-                      <label for="example-text-input" class="col-md-2" style="text-align: center;">Product</label>
+                      <label for="example-text-input" class="col-md-2" style="text-align: center;"><b>Product</b></label>
                       <div class="col-md-2">
-                          <p style="text-align: center;">Month</p>
+                          <p style="text-align: center;"><b>Month</b></p>
                       </div>
                       <div class="col-md-2">
-                          <p style="text-align: center;">Year</p>
+                          <p style="text-align: center;"><b>Year</b></p>
                       </div>
                   </div>
 
@@ -79,19 +79,19 @@
                                   
                               </tr>
                               <tr>
-                                  <th> Sr No </th>
-                                  <th> Product </th>
-                                  <th> Invoice No </th>
-                                  <th> Party Name </th>
-                                  <th> GST No </th>
-                                  <th> Date </th>
-                                  <th> Opening Stock </th>
-                                  <th> Purchase Qty(LTR) </th>
-                                  <th> Rate </th>
-                                  <th> Purchase Amount </th>
-                                  <th> Sales Qty(LTR) </th>
-                                  <th> Sales Amount </th>
-                                  <th> Closing Stock </th>
+                                  <th><b> Sr No </b></th>
+                                  <th><b> Product </b></th>
+                                  <th><b> Invoice No </b></th>
+                                  <th><b> Party Name </b></th>
+                                  <th><b> GST No </b></th>
+                                  <th><b> Date </b></th>
+                                  <th><b> Opening Stock </b></th>
+                                  <th><b> Purchase Qty(LTR) </b></th>
+                                  <th><b> Rate </b></th>
+                                  <th><b> Purchase Amount </b></th>
+                                  <th><b> Sales Qty(LTR) </b></th>
+                                  <th><b> Sales Amount </b></th>
+                                  <th><b> Closing Stock </b></th>
                               </tr>
                           </thead>
                           <tbody> 
@@ -112,7 +112,7 @@
                               </tr>
                               <tr>
                                   <td></td>
-                                  <td> Total </td>
+                                  <td><b> Total </b></td>
                                   <td></td>
                                   <td></td>
                                   <td></td>
