--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget13/lists-widget13.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget13/lists-widget13.component.html
@@ -8,7 +8,7 @@
               <h4 class="card-title">Shift-Book</h4>
             </div>
           </div>
-          <div class="col-lg-2">Year</div>
+          <div class="col-lg-2"><b>Year</b></div>
           <div class="col-lg-10">
             <div class="p-3">
               <div class="col-md-10">
@@ -24,7 +24,7 @@
             </div>
           </div>
   
-          <div class="col-lg-2">Month</div>
+          <div class="col-lg-2"><b>Month</b></div>
           <div class="col-lg-10">
             <div class="p-3">
               <h5 class="font-size-14 mb-3 mt-0">Slider with ticks and value</h5>
