--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget11/tables-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget11/tables-widget11.component.html
@@ -60,14 +60,14 @@
       <table class="table align-middle gs-0 gy-4">
         <!-- begin::Table head -->
         <thead>
-          <tr class="fw-bolder text-muted bg-light">
-            <th class="min-w-125px">Date</th>
-            <th class="min-w-125px">No.of Credit Sales Txn</th>
-            <th class="min-w-125px">Value of Credit Sales Txn</th>
-            <th class="min-w-125px">Active Cust Count For Credit Sales Txn</th>
-            <th class="min-w-125px">Value Of Credit Payment Txn</th>
-            <th class="min-w-125px">No. Of Credit Payment Txn</th>
-            <th class="min-w-125px">Active Cust Count For Credit Payment Txn</th>
+          <tr class="fw-bolder bg-light">
+            <th class="min-w-125px"><b>Date</b></th>
+            <th class="min-w-125px"><b>No.of Credit Sales Txn</b></th>
+            <th class="min-w-125px"><b>Value of Credit Sales Txn</b></th>
+            <th class="min-w-125px"><b>Active Cust Count For Credit Sales Txn</b></th>
+            <th class="min-w-125px"><b>Value Of Credit Payment Txn</b></th>
+            <th class="min-w-125px"><b>No. Of Credit Payment Txn</b></th>
+            <th class="min-w-125px"><b>Active Cust Count For Credit Payment Txn</b></th>
             <!-- <th class="min-w-125px">No. Of Credit Payment Txn</th> -->
           </tr>
         </thead>
