--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget13/tables-widget13.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget13/tables-widget13.component.html
@@ -18,16 +18,16 @@
     <table class="table align-middle gs-0 gy-4">
       <!-- begin::Table head -->
       <thead>
-        <tr class="fw-bolder text-muted bg-light">
-          <th class="min-w-125px">Petrol Pump Name</th>
-          <th class="min-w-125px">All Customer Count</th>
-          <th class="min-w-125px">Active Customer Count</th>
-          <th class="min-w-125px">Manager Count</th>
-          <th class="min-w-125px">Operator Count</th>
-          <th class="min-w-125px">Digital Pos Count</th>
-          <th class="min-w-125px">Tank Count</th>
-          <th class="min-w-125px">Pump Count</th>
-          <th class="min-w-125px">Nozzle Count</th>
+        <tr class="fw-bolder bg-light">
+          <th class="min-w-125px"><b>Petrol Pump Name</b></th>
+          <th class="min-w-125px"><b>All Customer Count</b></th>
+          <th class="min-w-125px"><b>Active Customer Count</b></th>
+          <th class="min-w-125px"><b>Manager Count</b></th>
+          <th class="min-w-125px"><b>Operator Count</b></th>
+          <th class="min-w-125px"><b>Digital Pos Count</b></th>
+          <th class="min-w-125px"><b>Tank Count</b></th>
+          <th class="min-w-125px"><b>Pump Count</b></th>
+          <th class="min-w-125px"><b>Nozzle Count</b></th>
         </tr>
       </thead>
       <!-- end::Table head -->
