--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget16/tables-widget16.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget16/tables-widget16.component.html
@@ -35,14 +35,14 @@
                                     <tr>
                                         <th>
                                         </th>
-                                        <th> {{ lastMonthYear }} toll payment </th>
-                                        <th> {{ lastMonthYear }} toll recharge </th>
-                                        <th> {{ lastMonthYear }} fuel credit </th>
-                                        <th> {{ lastMonthYear }} fuel credit payment </th>
-                                        <th> {{ currentMonthYear }} toll payment </th>
-                                        <th> {{ currentMonthYear }} toll recharge </th>
-                                        <th> {{ currentMonthYear }} fuel credit </th>
-                                        <th> {{ currentMonthYear }} fuel credit Payment </th>
+                                        <th><b> {{ lastMonthYear }} toll payment </b></th>
+                                        <th><b> {{ lastMonthYear }} toll recharge </b></th>
+                                        <th><b> {{ lastMonthYear }} fuel credit </b></th>
+                                        <th><b> {{ lastMonthYear }} fuel credit payment </b></th>
+                                        <th><b> {{ currentMonthYear }} toll payment </b></th>
+                                        <th><b> {{ currentMonthYear }} toll recharge </b></th>
+                                        <th><b> {{ currentMonthYear }} fuel credit </b></th>
+                                        <th><b> {{ currentMonthYear }} fuel credit Payment </b></th>
                                     </tr>
                                 </thead>
                                 <tbody *ngFor="let data of allfastagTransactionData">
