--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget30/tables-widget30.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget30/tables-widget30.component.html
@@ -208,7 +208,7 @@
                 aria-expanded="true"></i>
               <div class="dropdown-menu dropdown-menu-end" ngbDropdownMenu>
                 <a class="dropdown-item" href="javascript: void(0);"
-                  (click)="updateName(editName, data.fuelDealerCustomerMapId, data.companyName, data.hostName, data.mappingGST, data.mappingEmail, data.maxCreditAmount, data.creditDayLimit, data.mappingAddress1, data.mappingAddress2, data.mappingCity)">
+                  (click)="updateName(editName, data.fuelDealerCustomerMapId, data.companyName, data.hostName, data.mappingGST, data.mappingEmail, data.maxCreditAmount, data.creditDayLimit, data.mappingAddress1, data.mappingAddress2, data.mappingCity, data.addressId)">
                   &nbsp; Edit</a>
                 <span>
                   <a class="dropdown-item" href="javascript: void(0);"
@@ -285,7 +285,7 @@
                 aria-expanded="true"></i>
               <div class="dropdown-menu dropdown-menu-end" ngbDropdownMenu>
                 <a class="dropdown-item" href="javascript: void(0);"
-                  (click)="updateName(editName, data.fuelDealerCustomerMapId, data.companyName, data.hostName, data.mappingGST, data.mappingEmail, data.maxCreditAmount, data.creditDayLimit, data.mappingAddress1, data.mappingAddress2, data.mappingCity)">
+                  (click)="updateName(editName, data.fuelDealerCustomerMapId, data.companyName, data.hostName, data.mappingGST, data.mappingEmail, data.maxCreditAmount, data.creditDayLimit, data.mappingAddress1, data.mappingAddress2, data.mappingCity, data.addressId)">
                   &nbsp; Edit</a>
                 <span>
                   <a class="dropdown-item" href="javascript: void(0);"
