--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget8/tables-widget8.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget8/tables-widget8.component.html
@@ -80,12 +80,12 @@
         <table id="excel-table" class="table align-middle gs-0 gy-3">
           <!-- begin::Table head -->
           <thead>
-            <tr class="fw-bolder text-muted bg-light">
-              <th class="min-w-125px">Entity Id</th>
-              <th class="min-w-125px">Cr Sales</th>
-              <th class="min-w-125px">Cr Payments</th>
-              <th class="min-w-125px">Toll Recharge(Credit)</th>
-              <th class="min-w-125px">Toll Payments(Debit)</th>
+            <tr class="fw-bolder bg-light">
+              <th class="min-w-125px"><b>Entity Id</b></th>
+              <th class="min-w-125px"><b>Cr Sales</b></th>
+              <th class="min-w-125px"><b>Cr Payments</b></th>
+              <th class="min-w-125px"><b>Toll Recharge(Credit)</b></th>
+              <th class="min-w-125px"><b>Toll Payments(Debit)</b></th>
             </tr>
           </thead>
           <!-- end::Table head -->
