--- a/src/app/_metronic/partials/content/widgets/advance-tables/advance-tables-widget15/advance-tables-widget15.component.html
+++ b/src/app/_metronic/partials/content/widgets/advance-tables/advance-tables-widget15/advance-tables-widget15.component.html
@@ -24,7 +24,7 @@
                     <td style="text-align: center;"> {{data.lubricantsCreatedBy}} </td> 
 
 
-                    <td style="text-align: left;cursor: pointer;" >
+                    <td style="text-align: center;cursor: pointer;" >
                         <div ngbDropdown placement="bottom-left">
                             <i class="fa-solid fa-ellipsis-vertical" ngbDropdownToggle data-toggle="dropdown"
                               aria-expanded="true"></i>
@@ -56,7 +56,7 @@
                             <div class="row">
                                 <div class="col-md-2"></div>
                                 <div class="col-md-6">
-                                    <label >lubricant name :</label>
+                                    <label ><b>lubricant name :</b></label>
                                     <input class="form-control" formControlName="lubricantsName" 
                                         required>
             
@@ -66,7 +66,7 @@
                             <div class="row">                         
                                 <div class="col-md-2"></div>
                                 <div class="col-md-6">
-                                    <label > unit :</label>
+                                    <label ><b> unit :</b></label>
                                     <select class="form-control" formControlName="lubricantsUnit" >
                                         <option value="Ltr">Ltr </option>
                                         <option value="Kg">Kg</option> 
@@ -77,7 +77,7 @@
                             <div class="row">
                                 <div class="col-md-2"></div>
                                 <div class="col-md-6">
-                                    <label >HSN/SAC :</label>
+                                    <label ><b>HSN/SAC :</b></label>
                                     <input class="form-control" formControlName="lubricantsHsnSacNumber" 
                                         required>
             
