--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget12/charts-widget12.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget12/charts-widget12.component.html
@@ -21,7 +21,7 @@
             <form [formGroup]="filterForm">
 
               <div class="row">
-                <label for="example-text-input" class="col-auto col-form-label">Date Range</label>
+                <label for="example-text-input" class="col-auto col-form-label"><b>Date Range</b></label>
 
                 <div class="col-md-4">
 
@@ -168,7 +168,7 @@
                       <div class="row">
                         <div class="col-md-1"></div>
                         <div class="col-md-5">
-                          <label class="labelNewMargin">Price:</label>
+                          <label class="labelNewMargin"><b>Price:</b></label>
                         </div>
                         <div class="col-md-6">
                           <input class="form-control form-control-sm mr-1 w-40" style="font-size: 0.750rem;"
@@ -180,7 +180,8 @@
                         <div class="col-md-4"></div>
                         <div class="col-md-2">
                           <button type="submit" class="btn btn-success" (click)="editFuelPrice()">Update</button>
-                        </div>&nbsp;&nbsp;
+                        </div>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         <div class="col-md-2">
                           <button type="submit" class="btn btn-secondary" (click)="d('Cross click')">Cancel</button>
                         </div>
