--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget13/charts-widget13.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget13/charts-widget13.component.html
@@ -1,7 +1,7 @@
 <br>
 <form [formGroup]="filterForm">
   <div class="row">
-    <label for="example-text-input" class="col-auto col-form-label">Select Bill :</label>
+    <label for="example-text-input" class="col-auto col-form-label"><b>Select Bill :</b></label>
 
     <div class="col-md-2">
       <select class="form-control" formControlName="purpose" required>
@@ -10,7 +10,7 @@
       </select>
     </div>
 
-    <label for="example-text-input" class="col-auto col-form-label">Date Range :</label>
+    <label for="example-text-input" class="col-auto col-form-label"><b>Date Range :</b></label>
 
     <div class="col-md-2">
       <input class="form-control" placeholder="DD-MM-YYYY" readonly style="background-color: #ffffff;" name="startDate"
