--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget3/charts-widget3.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget3/charts-widget3.component.html
@@ -23,7 +23,7 @@
 
                   <div class="row">
 
-                    <label for="example-text-input" class="col-auto col-form-label">Date Range</label>
+                    <label for="example-text-input" class="col-auto col-form-label"><b>Date Range</b></label>
 
 
                     <div class="col-md-2">
