--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget6/charts-widget6.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget6/charts-widget6.component.html
@@ -10,14 +10,48 @@
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <script type='text/javascript' src='../../../../../../assets/EditableInvoice/js/jquery-1.3.2.min1.js'></script>
   <script type='text/javascript' src='../../../../../../assets/EditableInvoice/js/example1.js'></script>
+
+  <style>
+    @media print {
+      .page-break {
+        display: block;
+        page-break-before: always;
+
+        size: A4 portrait;
+      }
+    }
+
+    @media print {
+      body {
+        margin: 0;
+        padding: 0;
+        /* -webkit-print-color-adjust: exact; */
+      }
+
+      .A4 {
+        box-shadow: none;
+        margin: 0;
+        width: auto;
+        height: auto;
+      }
+
+      .noprint {
+        display: none;
+      }
+
+      .print {
+        display: block;
+      }
+    }
+  </style>
 </head>
 
 <body *ngIf="crPurchaseReportTx" id="contentToConvert">
   <div id="page-wrap">
     <div class="row noprint">
       <div class="col-auto">
-        &nbsp; <button class="noprint" style="font-size: medium;" printSectionId="sanjay" [useExistingCss]="true" ngxPrint> &nbsp;&nbsp;<i
-            class="fa fa-print" aria-hidden="true"></i> &nbsp;</button>
+        &nbsp; <button class="noprint" style="font-size: medium;" printSectionId="sanjay" [useExistingCss]="true"
+          ngxPrint> &nbsp;&nbsp;<i class="fa fa-print" aria-hidden="true"></i> &nbsp;</button>
       </div>
       <!-- <div class="col-md-1">
             <button class="btn btn-success" type="button" (click)="downloadExcel()">
@@ -39,7 +73,7 @@
                 <h5><b>{{oilCompanyName}}</b> </h5>
                 <h6> <b>{{address1}} {{address2}} {{city}}</b> <br><b>{{state}} {{pin}} <br>
                     GST</b> : {{GSTNumber}}
-                <b> Phone </b>: {{mobile}}
+                  <b> Phone </b>: {{mobile}}
                 </h6>
                 <h6><b>From : {{crPurchaseStartDate}} To :
                     {{crPurchaseEndDate}}</b> </h6>
@@ -136,7 +170,8 @@
   <div id="page-wrap">
     <div class="row noprint">
       <div class="col-auto noprint">
-        &nbsp; <button class="noprint" style="font-size: medium;" onclick="window.print()"> &nbsp;&nbsp;<i
+        &nbsp; <button class="noprint" style="font-size: medium;"  printSectionId="sanjay" [useExistingCss]="true"
+        ngxPrint> &nbsp;&nbsp;<i
             class="fa fa-print" aria-hidden="true"></i> &nbsp;</button>
       </div>
       <!-- <div class="col-md-1">
@@ -186,10 +221,14 @@
                 <table class="table">
                   <thead>
                     <tr>
-                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'0px'"><b>Khata Name</b></th>
-                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'0px'"><b>Product</b></th>
-                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'0px'"><b>Amount</b></th>
-                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'0px'"><b>Quantity</b></th>
+                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'0px'"><b>Khata
+                          Name</b></th>
+                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'0px'"><b>Product</b>
+                      </th>
+                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'0px'"><b>Amount</b>
+                      </th>
+                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'0px'"><b>Quantity</b>
+                      </th>
                     </tr>
                   </thead>
                   &nbsp;
@@ -271,7 +310,8 @@
   <div id="page-wrap">
     <div class="row noprint">
       <div class="col-auto noprint">
-        &nbsp; <button class="noprint" style="font-size: medium;" onclick="window.print()"> &nbsp;&nbsp;<i
+        &nbsp; <button class="noprint" style="font-size: medium;" printSectionId="sanjay" [useExistingCss]="true"
+        ngxPrint> &nbsp;&nbsp;<i
             class="fa fa-print" aria-hidden="true"></i> &nbsp;</button>
       </div>
       <!-- <div class="col-md-1">
@@ -294,7 +334,7 @@
                 <h5><b>{{oilCompanyName}}</b> </h5>
                 <h6> <b>{{address1}} {{address2}} {{city}}</b> <br><b>{{state}} {{pin}} <br>
                     GST</b> : {{GSTNumber}}
-                <b> Phone </b>: {{mobile}}
+                  <b> Phone </b>: {{mobile}}
                 </h6>
                 <h6><b>Month : {{month}} </b> </h6>
                 <h6><b>Invoice No. : <span>{{sysGeneInvoiceNumber}}</span></b></h6>
@@ -319,12 +359,17 @@
                 <table class="table">
                   <thead>
                     <tr>
-                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'50px'"><b>Sr No</b></th>
-                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'100px'"><b>Khata Name</b>
+                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'50px'"><b>Sr No</b>
                       </th>
-                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'90px'"><b>Product</b></th>
-                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'90px'"><b>Amount</b></th>
-                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'90px'"><b>Quantity</b></th>
+                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'100px'"><b>Khata
+                          Name</b>
+                      </th>
+                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'90px'"><b>Product</b>
+                      </th>
+                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'90px'"><b>Amount</b>
+                      </th>
+                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'90px'"><b>Quantity</b>
+                      </th>
                     </tr>
                   </thead>
                   &nbsp;
