--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget7/charts-widget7.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget7/charts-widget7.component.html
@@ -1,12 +1,13 @@
 <br>
 <form [formGroup]="filterForm">
   <div class="row">
-    <label for="example-text-input" class="col-lg-1 col-form-label">Date </label>
+    &nbsp;&nbsp;&nbsp;&nbsp;
+    <label for="example-text-input" class="col-md-1 col-form-label"><b>Date </b></label>
     <div class="col-md-2">
       <input class="form-control" placeholder="DD-MM-YYYY" readonly style="background-color: #ffffff;" name="date"
         ngbTooltip="Start Date" (click)="date.toggle()" ngbDatepicker #date="ngbDatepicker" formControlName="date">
     </div>
-    <div class="col-md-9">
+    <div class="col-md-8">
       <button type="button" class="btn btn-success btn-rounded mb-2 me-2" name="button"
         (click)="toggleDropdown()">Select Product</button>
       <div *ngIf="showDropdown" class="dropdown">
@@ -23,25 +24,26 @@
   </div>
   <br>
   <div class="row">
-    <label for="example-text-input" class="col-lg-1 col-form-label">Khata</label>
-    <div class="col-lg-6">
+    &nbsp;&nbsp;&nbsp;&nbsp;
+    <label for="example-text-input" class="col-lg-1 col-form-label"><b>Khata</b></label>
+    <div class="col-md-6">
       <input #myinput class="form-control" type="text" list="mappingAccData" placeholder="Select"
         formControlName="selectedCorp" (change)="getDetailsByfuelDealerCustomerMapIdId($event)">
       <datalist id="mappingAccData">
         <option *ngFor="let data of mappingAccData" [value]="data.companyName">
       </datalist>
     </div>
-    <div class="col-lg-1">
+    <div class="col-md-1">
       <button type="button" class="btn btn-primary" name="button" (click)="filterDay()">
         Submit
       </button>
     </div>
-    <div class="col-lg-1">
+    <div class="col-md-1">
       <button type="submit" class="btn btn-secondary" name="button" (click)="clearDay()">
         Cancel
       </button>
     </div>
-    <div class="col-lg-2"></div>
+    <div class="col-md-1"></div>
     <div class="col-md-1">
       <button class="btn btn-success" type="button" (click)=" printPdfDay()">
         Print
@@ -50,8 +52,9 @@
   </div>
   <br>
   <div class="row">
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <div class="col-md-4">
-      <label>Add Statement Number</label>
+      <label><b>Add Statement Number</b></label>
       <input type="text" class="form-control" formControlName="manualNo" placeholder="Enter Statement Number" />
     </div>
   </div>
