--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget8/charts-widget8.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget8/charts-widget8.component.html
@@ -1,14 +1,15 @@
 <br>
 <form [formGroup]="filterForm">
   <div class="row">
-    <label for="example-text-input" class="col-lg-1">Month</label>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <label for="example-text-input" class="col-md-1"><b>Month</b></label>
     <div class="col-md-2">
       <select class="form-control" formControlName="monthDAY" required>
         <option value=""> Select Month </option>
         <option *ngFor="let data of ficMonths" [value]="data.monthYear"> {{data.monthName}} {{data.year}} </option>
       </select>
     </div>
-    <div class="col-md-9">
+    <div class="col-md-8">
       <button type="button" class="btn btn-success btn-rounded mb-2 me-2" name="button"
         (click)="toggleDropdown()">Select Product</button>
       <div *ngIf="showDropdown" class="dropdown">
@@ -25,25 +26,26 @@
   </div>
   <br>
   <div class="row">
-    <label for="example-text-input" class="col-lg-1 col-form-label">Khata</label>
-    <div class="col-lg-6">
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <label for="example-text-input" class="col-md-1 col-form-label"><b>Khata</b></label>
+    <div class="col-md-6">
       <input #myinput class="form-control" type="text" list="mappingAccData" placeholder="Select"
         formControlName="selectedCorp" (change)="getDetailsByfuelDealerCustomerMapIdId($event)">
       <datalist id="mappingAccData">
         <option *ngFor="let data of mappingAccData" [value]="data.companyName">
       </datalist>
     </div>
-    <div class="col-lg-1">
+    <div class="col-md-1">
       <button type="button" class="btn btn-primary" name="button" (click)="filterMonth()">
         Submit
       </button>
     </div>
-    <div class="col-lg-1">
+    <div class="col-md-1">
       <button type="submit" class="btn btn-secondary" name="button" (click)="clearMonth()">
         Cancel
       </button>
     </div>
-    <div class="col-lg-2"></div>
+    <div class="col-md-1"></div>
     <div class="col-md-1">
       <button class="btn btn-success" type="button" (click)=" printPdfMonth()">
         Print
@@ -52,8 +54,9 @@
   </div>
   <br>
   <div class="row">
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <div class="col-md-4">
-      <label>Add Statement Number</label>
+      <label><b>Add Statement Number</b></label>
       <input type="text" class="form-control" formControlName="manualNo" placeholder="Enter Statement Number" />
     </div>
   </div>
