--- a/src/app/_metronic/partials/content/widgets/feeds/feeds-widget10/feeds-widget10.component.html
+++ b/src/app/_metronic/partials/content/widgets/feeds/feeds-widget10/feeds-widget10.component.html
@@ -1,51 +1,4 @@
-<style>
-.A4 {
-  background: white;
-  width: 23cm;
-  height: 40.7cm;
-  display: block;
-  margin: 0 auto;
-  padding: 1px 1px;
-  margin-bottom: 0.5cm;
-  box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
-  
-  box-sizing: border-box;
-  font-size: 12pt;
-  /* //line-height:normal; */
-}
 
-@media print {
-  .page-break {
-    display: block;
-    page-break-before: always;
-  
-  size: A4 portrait;}
-}
-
-@media print {
-  #print-section {
-    overflow-y: scroll;
-    position: relative;
-  }
-  body {
-    margin: 0;
-    padding: 0;
-    print-color-adjust: exact;
-  }
-  .A4 {
-    box-shadow: none;
-    margin: 0;
-    width: auto;
-    height: auto;
-  }
-  .noprint {
-    display: none;
-  }
-  .print {
-    display: block;
-  }
-}
-</style>
 <!DOCTYPE html
   PUBLIC "-//W3C//Dth XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/Dth/xhtml1-transitional.dth">
 <html xmlns="https://www.w3.org/1999/xhtml">
@@ -58,6 +11,54 @@
   <script type='text/javascript' src='../../../../../../assets/EditableInvoice/js/jquery-1.3.2.min1.js'></script>
   <script type='text/javascript' src='../../../../../../assets/EditableInvoice/js/example1.js'></script>
 
+  <style>
+    .A4 {
+      background: white;
+      width: 23cm;
+      height: 40.7cm;
+      display: block;
+      margin: 0 auto;
+      padding: 1px 1px;
+      margin-bottom: 0.5cm;
+      box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
+      
+      box-sizing: border-box;
+      font-size: 12pt;
+      /* //line-height:normal; */
+    }
+    
+    @media print {
+      .page-break {
+        display: block;
+        page-break-before: always;
+      
+      size: A4 portrait;}
+    }
+    
+    @media print {
+      #print-section {
+        overflow-y: scroll;
+        position: relative;
+      }
+      body {
+        margin: 0;
+        padding: 0;
+        print-color-adjust: exact;
+      }
+      .A4 {
+        box-shadow: none;
+        margin: 0;
+        width: auto;
+        height: auto;
+      }
+      .noprint {
+        display: none;
+      }
+      .print {
+        display: block;
+      }
+    }
+    </style>
 </head>
 
 <body id="contentToConvert">
@@ -79,9 +80,9 @@
       </div>
     </div>
 
-    <div class="card">
+    <div class="card" id="sanjay">
       <div class="cardbody">
-        <div class="row" id="sanjay">
+        <div class="row">
           <div class="col-md-1"></div>
           <div class="col-md-10">
             <table class="table">
@@ -798,7 +799,7 @@
   <div class="row noprint">
     <div class="col-md-8"></div>
     <div class="col-auto">
-      <button class="btn btn-success" printSectionId="sanjay" ngxPrint>print </button>
+      <button class="btn btn-success" printSectionId="sanjay" [useExistingCss]="true" ngxPrint>print </button>
     </div>
     <div class="col-auto">
       <button class="btn btn-primary" (click)="downloadReport()">Download </button>
