--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget15/lists-widget15.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget15/lists-widget15.component.html
@@ -86,7 +86,7 @@
 
           <ng-template #amount>
             <div class="row">
-              <div class="col-md-9"></div>
+              <div class="col-md-10"></div>
               <div class="col-md-1">
                 <span style="font-size: 35px;cursor: pointer;" (click)="exportPDFamount()" ngbTooltip="Download PDF"
                   placement="bottom"><i class="fas fa-file-pdf" style="font-size: 30px;"></i></span><br>
@@ -103,14 +103,14 @@
               <table class="table table-centered table-nowrap" id="excel-table">
                 <thead class="table-light">
                   <tr>
-                    <th style="text-align: left;"><b> operator name </b></th>
-                    <th style="text-align: left;"><b> meter sales </b></th>
-                    <th style="text-align: left;"><b> credit (a) </b></th>
-                    <th style="text-align: left;"><b> digital (b) </b></th>
-                    <th style="text-align: left;"><b> cash (c) </b></th>
-                    <th style="text-align: left;"><b> expenses </b></th>
-                    <th style="text-align: left;"><b> short </b></th>
-                    <th style="text-align: left;"><b> shift tally (a+b+c) </b></th>
+                    <th style="text-align: left;"><b> Operator Name </b></th>
+                    <th style="text-align: left;"><b> Meter Sales </b></th>
+                    <th style="text-align: left;"><b> Credit (a) </b></th>
+                    <th style="text-align: left;"><b> Digital (b) </b></th>
+                    <th style="text-align: left;"><b> Cash (c) </b></th>
+                    <th style="text-align: left;"><b> Expenses </b></th>
+                    <th style="text-align: left;"><b> Short </b></th>
+                    <th style="text-align: left;"><b> Shift Tally (a+b+c) </b></th>
                   </tr>
                 </thead>
 
@@ -145,7 +145,7 @@
             <br>
             <form [formGroup]="filterForm">
               <div class="row">
-                <label for="example-text-input" class="col-auto col-form-label">Select Product</label>
+                <label for="example-text-input" class="col-auto col-form-label"><b>Select Product</b></label>
 
                 <div class="col-md-2">
                   <select class="form-control" formControlName="productName" (change)="getByProduct($event)" required>
@@ -173,11 +173,11 @@
               <table class="table table-centered table-nowrap" id="excel-table">
                 <thead class="table-light">
                   <tr>
-                    <th style="text-align: left;"><b> operator name </b></th>
+                    <th style="text-align: left;"><b> Operator Name </b></th>
                     <th style="text-align: left;"><b> Product </b></th>
-                    <th style="text-align: left;"><b> credit (Quantity) Ltr/Kg </b></th>
-                    <th style="text-align: left;"><b> meter Sales (Quantity) Ltr/Kg </b></th>
-                    <th style="text-align: left;"><b> meter Sales (Amount) Rs </b></th>
+                    <th style="text-align: left;"><b> Credit (Quantity) Ltr/Kg </b></th>
+                    <th style="text-align: left;"><b> Meter Sales (Quantity) Ltr/Kg </b></th>
+                    <th style="text-align: left;"><b> Meter Sales (Amount) Rs </b></th>
                   </tr>
                 </thead>
 
