--- a/src/app/_metronic/partials/content/widgets/tiles/tiles-widget5/tiles-widget5.component.html
+++ b/src/app/_metronic/partials/content/widgets/tiles/tiles-widget5/tiles-widget5.component.html
@@ -552,14 +552,14 @@
             <table class="table table-centered table-nowrap" style="border: solid 1px;">
               <thead>
                 <tr>
-                  <th style="text-align: left;border: solid 1px;"> Book </th>
-                  <th style="text-align: left;border: solid 1px;">
+                  <th style="text-align: center;border: solid 1px;"> Book </th>
+                  <th style="text-align: center;border: solid 1px;">
                     Opening balance <br>
                     ( as of {{openingDate | date:"mediumDate"}} )
                   </th>
-                  <th style="text-align: left;border: solid 1px;"> Total Debit </th>
-                  <th style="text-align: left;border: solid 1px;"> Total Credit </th>
-                  <th style="text-align: left;border: solid 1px;">
+                  <th style="text-align: center;border: solid 1px;"> Total Debit </th>
+                  <th style="text-align: center;border: solid 1px;"> Total Credit </th>
+                  <th style="text-align: center;border: solid 1px;">
                     Closing Balance <br>
                     ( as of {{closingDate | date:"mediumDate"}} )
                   </th>
@@ -567,10 +567,10 @@
               </thead>
               <tbody>
                 <tr>
-                  <td style="text-align: left;border: solid 1px;">
+                  <td style="text-align: center;border: solid 1px;">
                     Oil Company
                   </td>
-                  <td *ngIf="oilCoStatus" style="text-align: left;border: solid 1px;">
+                  <td *ngIf="oilCoStatus" style="text-align: center;border: solid 1px;">
                     <span *ngIf="oilCoAcTotalAmount1 < 0" style="color: red;">
                       {{ oilCoAcTotalAmount1 | number:'1.2-2'}}
                     </span>
@@ -578,16 +578,16 @@
                       {{ oilCoAcTotalAmount1 | number:'1.2-2'}}
                     </span>
                   </td>
-                  <td *ngIf="!oilCoStatus" style="text-align: left;">
+                  <td *ngIf="!oilCoStatus" style="text-align: center;">
                     -
                   </td>
-                  <td style="text-align: left;border: solid 1px;">
+                  <td style="text-align: center;border: solid 1px;">
                     {{totalOilCoACDebit | number:'1.2-2'}}
                   </td>
-                  <td style="text-align: left;border: solid 1px;">
+                  <td style="text-align: center;border: solid 1px;">
                     {{totalOilCoCredit | number:'1.2-2'}}
                   </td>
-                  <td *ngIf="oilCoStatus" style="text-align: left;border: solid 1px;">
+                  <td *ngIf="oilCoStatus" style="text-align: center;border: solid 1px;">
                     <span *ngIf="closingOilCoACBlc < 0" style="color: red;">
                       {{ closingOilCoACBlc | number:'1.2-2'}}
                     </span>
@@ -595,15 +595,15 @@
                       {{ closingOilCoACBlc | number:'1.2-2'}}
                     </span>
                   </td>
-                  <td *ngIf="!oilCoStatus" style="text-align: left;border: solid 1px;">
+                  <td *ngIf="!oilCoStatus" style="text-align: center;border: solid 1px;">
                     -
                   </td>
                 </tr>
                 <tr *ngFor="let data of bankWiseDetailsOPEN">
-                  <td style="text-align: left;border: solid 1px;">
+                  <td style="text-align: center;border: solid 1px;">
                     {{data.bankName}} {{data.accountNumber}}
                   </td>
-                  <td *ngIf="data.status != 'FALSE' " style="text-align: left;border: solid 1px;">
+                  <td *ngIf="data.status != 'FALSE' " style="text-align: center;border: solid 1px;">
                     <span *ngIf="data.accType == 'LOAN' ">
                       <span
                         *ngIf="(data.expenseAmount + data.totalOpeningDb - data.totalOpeningCr - data.totalOpeningCrPayment - data.totalOpeningCrPay) < 0"
@@ -631,16 +631,16 @@
                       </span>
                     </span>
                   </td>
-                  <td *ngIf="data.status == 'FALSE' " style="text-align: left;border: solid 1px;">
+                  <td *ngIf="data.status == 'FALSE' " style="text-align: center;border: solid 1px;">
                     -
                   </td>
-                  <td style="text-align: left;border: solid 1px;">
+                  <td style="text-align: center;border: solid 1px;">
                     {{ data.totalDebit | number:'1.2-2'}}
                   </td>
-                  <td style="text-align: left;border: solid 1px;">
+                  <td style="text-align: center;border: solid 1px;">
                     {{ data.totalCredit + data.totalCreditPayment + data.totalCreditPay | number:'1.2-2'}}
                   </td>
-                  <td *ngIf="data.status != 'FALSE' " style="text-align: left;border: solid 1px;">
+                  <td *ngIf="data.status != 'FALSE' " style="text-align: center;border: solid 1px;">
                     <span *ngIf="data.accType == 'LOAN' ">
                       <span
                         *ngIf="(data.expenseAmount + data.totalOpeningDb - data.totalOpeningCr - data.totalOpeningCrPayment + data.totalDebit - data.totalCredit - data.totalCreditPayment - data.totalOpeningCrPay) < 0"
@@ -672,15 +672,15 @@
                       </span>
                     </span>
                   </td>
-                  <td *ngIf="data.status == 'FALSE' " style="text-align: left;border: solid 1px;">
+                  <td *ngIf="data.status == 'FALSE' " style="text-align: center;border: solid 1px;">
                     -
                   </td>
                 </tr>
                 <tr>
-                  <td style="text-align: left;border: solid 1px;">
+                  <td style="text-align: center;border: solid 1px;">
                     Cash
                   </td>
-                  <td *ngIf="cashStatus" style="text-align: left;border: solid 1px;">
+                  <td *ngIf="cashStatus" style="text-align: center;border: solid 1px;">
                     <span *ngIf="cashAcTotalAmount1 < 0" style="color: red;">
                       {{ (cashAcTotalAmount1) | number:'1.2-2'}}
                     </span>
@@ -688,16 +688,16 @@
                       {{ cashAcTotalAmount1 | number:'1.2-2'}}
                     </span>
                   </td>
-                  <td *ngIf="!cashStatus" style="text-align: left;border: solid 1px;">
+                  <td *ngIf="!cashStatus" style="text-align: center;border: solid 1px;">
                     -
                   </td>
-                  <td style="text-align: left;border: solid 1px;">
+                  <td style="text-align: center;border: solid 1px;">
                     {{totalCashACDebit | number:'1.2-2'}}
                   </td>
-                  <td style="text-align: left;border: solid 1px;">
+                  <td style="text-align: center;border: solid 1px;">
                     {{totalCashACCredit | number:'1.2-2'}}
                   </td>
-                  <td *ngIf="cashStatus" style="text-align: left;border: solid 1px;">
+                  <td *ngIf="cashStatus" style="text-align: center;border: solid 1px;">
                     <span *ngIf="closingCashACBlc < 0" style="color: red;">
                       {{ closingCashACBlc | number:'1.2-2'}}
                     </span>
@@ -705,7 +705,7 @@
                       {{ closingCashACBlc | number:'1.2-2'}}
                     </span>
                   </td>
-                  <td *ngIf="!cashStatus" style="text-align: left;border: solid 1px;">
+                  <td *ngIf="!cashStatus" style="text-align: center;border: solid 1px;">
                     -
                   </td>
                 </tr>
